--- a/view/css/index.css
+++ b/view/css/index.css
@@ -4,3 +4,15 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components{
+    .mega-sub-item{
+        @apply block p-2 hover:bg-black hover:text-white cursor-pointer;
+    }
+    .mega-sub-item-title{
+        @apply block font-bold text-xl mb-5 ;
+    }
+    .input{
+        @apply border border-gray-300 px-4 py-2 rounded-md  duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500;
+    }
+}
