--- a/view/css/output.css
+++ b/view/css/output.css
@@ -536,6 +536,27 @@ video {
   --tw-backdrop-sepia:  ;
 }
 
+.mega-sub-item{
+  display: block;
+  cursor: pointer;
+  padding: 0.5rem;
+}
+
+.mega-sub-item:hover{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.mega-sub-item-title{
+  margin-bottom: 1.25rem;
+  display: block;
+  font-size: 1.25rem;
+  line-height: 1.75rem;
+  font-weight: 700;
+}
+
 .input{
   border-radius: 0.375rem;
   border-width: 1px;
@@ -563,6 +584,14 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+.invisible{
+  visibility: hidden;
+}
+
+.fixed{
+  position: fixed;
+}
+
 .absolute{
   position: absolute;
 }
@@ -571,12 +600,24 @@ video {
   position: relative;
 }
 
+.\!top-\[40\%\]{
+  top: 40% !important;
+}
+
 .-left-6{
   left: -1.5rem;
 }
 
+.-right-5{
+  right: -1.25rem;
+}
+
 .-right-6{
   right: -1.5rem;
+}
+
+.-top-3{
+  top: -0.75rem;
 }
 
 .bottom-0{
@@ -595,12 +636,28 @@ video {
   right: 0px;
 }
 
+.right-12{
+  right: 3rem;
+}
+
+.right-\[20\%\]{
+  right: 20%;
+}
+
 .top-0{
   top: 0px;
 }
 
 .top-1\/2{
   top: 50%;
+}
+
+.top-full{
+  top: 100%;
+}
+
+.z-50{
+  z-index: 50;
 }
 
 .col-span-2{
@@ -633,6 +690,10 @@ video {
   margin-left: 0.5rem;
 }
 
+.ml-auto{
+  margin-left: auto;
+}
+
 .mr-20{
   margin-right: 5rem;
 }
@@ -643,6 +704,10 @@ video {
 
 .mt-12{
   margin-top: 3rem;
+}
+
+.mt-2{
+  margin-top: 0.5rem;
 }
 
 .mt-3{
@@ -681,6 +746,14 @@ video {
   display: grid;
 }
 
+.hidden{
+  display: none;
+}
+
+.\!h-\[70px\]{
+  height: 70px !important;
+}
+
 .h-10{
   height: 2.5rem;
 }
@@ -691,6 +764,10 @@ video {
 
 .h-20{
   height: 5rem;
+}
+
+.h-6{
+  height: 1.5rem;
 }
 
 .h-\[35px\]{
@@ -709,6 +786,14 @@ video {
   height: 100%;
 }
 
+.max-h-0{
+  max-height: 0px;
+}
+
+.\!w-\[70px\]{
+  width: 70px !important;
+}
+
 .w-10{
   width: 2.5rem;
 }
@@ -723,6 +808,18 @@ video {
 
 .w-24{
   width: 6rem;
+}
+
+.w-6{
+  width: 1.5rem;
+}
+
+.w-96{
+  width: 24rem;
+}
+
+.w-\[1200px\]{
+  width: 1200px;
 }
 
 .w-\[1240px\]{
@@ -755,6 +852,10 @@ video {
 
 .w-\[400px\]{
   width: 400px;
+}
+
+.w-\[450px\]{
+  width: 450px;
 }
 
 .w-\[60\%\]{
@@ -867,6 +968,11 @@ video {
        column-gap: 2.5rem;
 }
 
+.gap-x-2{
+  -moz-column-gap: 0.5rem;
+       column-gap: 0.5rem;
+}
+
 .gap-x-5{
   -moz-column-gap: 1.25rem;
        column-gap: 1.25rem;
@@ -911,6 +1017,10 @@ video {
   overflow-x: auto;
 }
 
+.\!rounded-full{
+  border-radius: 9999px !important;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
@@ -935,6 +1045,10 @@ video {
   border-radius: 0.375rem;
 }
 
+.\!border{
+  border-width: 1px !important;
+}
+
 .border{
   border-width: 1px;
 }
@@ -955,6 +1069,11 @@ video {
   border-style: dashed;
 }
 
+.\!border-black{
+  --tw-border-opacity: 1 !important;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity)) !important;
+}
+
 .border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
@@ -965,9 +1084,18 @@ video {
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
 }
 
+.border-gray-500{
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
+}
+
 .border-gray-600{
   --tw-border-opacity: 1;
   border-color: rgb(75 85 99 / var(--tw-border-opacity));
+}
+
+.\!bg-\[rbg\(255\2c 255\2c 255\2c 0\.9\)\]{
+  background-color: rbg(255,255,255,0.9) !important;
 }
 
 .bg-\[\#333333\]{
@@ -1009,9 +1137,23 @@ video {
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
+.bg-red-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(252 165 165 / var(--tw-bg-opacity));
+}
+
+.bg-red-500{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 68 68 / var(--tw-bg-opacity));
+}
+
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.\!p-\[5px\]{
+  padding: 5px !important;
 }
 
 .p-2{
@@ -1038,6 +1180,11 @@ video {
 .px-2\.5{
   padding-left: 0.625rem;
   padding-right: 0.625rem;
+}
+
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
 }
 
 .px-4{
@@ -1116,8 +1263,22 @@ video {
   text-align: center;
 }
 
+.text-right{
+  text-align: right;
+}
+
 .font-roboto{
   font-family: Roboto, sans-serif;
+}
+
+.\!text-5xl{
+  font-size: 3rem !important;
+  line-height: 1 !important;
+}
+
+.\!text-xl{
+  font-size: 1.25rem !important;
+  line-height: 1.75rem !important;
 }
 
 .text-2xl{
@@ -1174,6 +1335,11 @@ video {
   letter-spacing: 0.025em;
 }
 
+.\!text-white{
+  --tw-text-opacity: 1 !important;
+  color: rgb(255 255 255 / var(--tw-text-opacity)) !important;
+}
+
 .text-\[\#FFFFFF\]{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1204,6 +1370,11 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
@@ -1228,6 +1399,12 @@ video {
 .shadow-lg{
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-md{
+  --tw-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 4px 6px -1px var(--tw-shadow-color), 0 2px 4px -2px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1298,6 +1475,11 @@ video {
   border-color: rgb(59 130 246 / var(--tw-border-opacity));
 }
 
+.hover\:\!bg-black:hover{
+  --tw-bg-opacity: 1 !important;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity)) !important;
+}
+
 .hover\:bg-black:hover{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1357,6 +1539,10 @@ video {
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
+.group:hover .group-hover\:visible{
+  visibility: visible;
+}
+
 .group:hover .group-hover\:absolute{
   position: absolute;
 }
@@ -1365,8 +1551,16 @@ video {
   bottom: 50%;
 }
 
+.group:hover .group-hover\:bottom-\[30\%\]{
+  bottom: 30%;
+}
+
 .group:hover .group-hover\:left-1\/2{
   left: 50%;
+}
+
+.group:hover .group-hover\:mt-0{
+  margin-top: 0px;
 }
 
 .group:hover .group-hover\:-translate-x-1\/2{
