--- a/view/css/output.css
+++ b/view/css/output.css
@@ -656,6 +656,14 @@ video {
   top: 100%;
 }
 
+.-left-\[25px\]{
+  left: -25px;
+}
+
+.-right-\[25px\]{
+  right: -25px;
+}
+
 .z-50{
   z-index: 50;
 }
@@ -734,8 +742,20 @@ video {
   margin-top: 2rem;
 }
 
+.mt-9{
+  margin-top: 2.25rem;
+}
+
+.block{
+  display: block;
+}
+
 .flex{
   display: flex;
+}
+
+.inline-flex{
+  display: inline-flex;
 }
 
 .table{
@@ -778,16 +798,32 @@ video {
   height: 380px;
 }
 
-.h-\[42px\]{
-  height: 42px;
-}
-
 .h-auto{
   height: auto;
 }
 
 .h-full{
   height: 100%;
+}
+
+.h-\[42px\]{
+  height: 42px;
+}
+
+.h-14{
+  height: 3.5rem;
+}
+
+.h-\[100px\]{
+  height: 100px;
+}
+
+.h-\[222px\]{
+  height: 222px;
+}
+
+.h-\[360px\]{
+  height: 360px;
 }
 
 .max-h-0{
@@ -895,6 +931,34 @@ video {
   width: 100%;
 }
 
+.w-1\/2{
+  width: 50%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
+}
+
+.w-28{
+  width: 7rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
+}
+
+.w-\[170px\]{
+  width: 170px;
+}
+
+.w-\[766px\]{
+  width: 766px;
+}
+
+.max-w-7xl{
+  max-width: 80rem;
+}
+
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
@@ -933,6 +997,10 @@ video {
   align-items: center;
 }
 
+.justify-start{
+  justify-content: flex-start;
+}
+
 .justify-end{
   justify-content: flex-end;
 }
@@ -955,6 +1023,10 @@ video {
 
 .gap-5{
   gap: 1.25rem;
+}
+
+.gap-2{
+  gap: 0.5rem;
 }
 
 .gap-x-1{
@@ -1007,6 +1079,10 @@ video {
   row-gap: 25px;
 }
 
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
   --tw-space-y-reverse: 0;
   margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
@@ -1047,6 +1123,18 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
+}
+
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
+.rounded-xl{
+  border-radius: 0.75rem;
 }
 
 .\!border{
@@ -1154,6 +1242,16 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#F3F3F3\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2f2f2\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 
 .\!p-\[5px\]{
@@ -1317,6 +1415,11 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
+}
+
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
 }
 
 .font-bold{
@@ -1579,4 +1682,19 @@ video {
 
 .group:hover .group-hover\:opacity-100{
   opacity: 1;
+}
+
+.peer:checked ~ .peer-checked\:border-black{
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.peer:checked ~ .peer-checked\:bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
 }
