--- a/view/css/output.css
+++ b/view/css/output.css
@@ -608,12 +608,20 @@ video {
   left: -1.5rem;
 }
 
+.-left-\[25px\]{
+  left: -25px;
+}
+
 .-right-5{
   right: -1.25rem;
 }
 
 .-right-6{
   right: -1.5rem;
+}
+
+.-right-\[25px\]{
+  right: -25px;
 }
 
 .-top-3{
@@ -656,14 +664,6 @@ video {
   top: 100%;
 }
 
-.-left-\[25px\]{
-  left: -25px;
-}
-
-.-right-\[25px\]{
-  right: -25px;
-}
-
 .z-50{
   z-index: 50;
 }
@@ -678,6 +678,14 @@ video {
 
 .col-end-5{
   grid-column-end: 5;
+}
+
+.m-12{
+  margin: 3rem;
+}
+
+.m-5{
+  margin: 1.25rem;
 }
 
 .mx-auto{
@@ -746,6 +754,10 @@ video {
   margin-top: 2.25rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .block{
   display: block;
 }
@@ -774,12 +786,12 @@ video {
   height: 70px !important;
 }
 
-.h-10{
-  height: 2.5rem;
-}
-
 .h-12{
   height: 3rem;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .h-20{
@@ -790,30 +802,6 @@ video {
   height: 1.5rem;
 }
 
-.h-\[35px\]{
-  height: 35px;
-}
-
-.h-\[380px\]{
-  height: 380px;
-}
-
-.h-auto{
-  height: auto;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-\[42px\]{
-  height: 42px;
-}
-
-.h-14{
-  height: 3.5rem;
-}
-
 .h-\[100px\]{
   height: 100px;
 }
@@ -822,8 +810,37 @@ video {
   height: 222px;
 }
 
+.h-\[35px\]{
+  height: 35px;
+}
+
 .h-\[360px\]{
   height: 360px;
+}
+
+.h-\[42px\]{
+  height: 42px;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-full{
+  height: 100%;
+}
+
+.h-5{
+  height: 1.25rem;
+}
+
+.h-16{
+  height: 4rem;
 }
 
 .max-h-0{
@@ -832,6 +849,14 @@ video {
 
 .\!w-\[70px\]{
   width: 70px !important;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
 }
 
 .w-10{
@@ -850,12 +875,20 @@ video {
   width: 6rem;
 }
 
+.w-28{
+  width: 7rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
 
 .w-96{
   width: 24rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[1200px\]{
@@ -874,6 +907,10 @@ video {
   width: 1480px;
 }
 
+.w-\[170px\]{
+  width: 170px;
+}
+
 .w-\[222px\]{
   width: 222px;
 }
@@ -882,8 +919,8 @@ video {
   width: 270px;
 }
 
-.w-\[30\%\]{
-  width: 30%;
+.w-\[300px\]{
+  width: 300px;
 }
 
 .w-\[35px\]{
@@ -910,6 +947,10 @@ video {
   width: 70%;
 }
 
+.w-\[766px\]{
+  width: 766px;
+}
+
 .w-\[calc\(30\%-40px\)\]{
   width: calc(30% - 40px);
 }
@@ -931,28 +972,20 @@ video {
   width: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
+.w-5{
+  width: 1.25rem;
 }
 
-.w-1\/3{
-  width: 33.333333%;
+.w-\[calc\(100\%-96px\)\]{
+  width: calc(100% - 96px);
 }
 
-.w-28{
-  width: 7rem;
+.w-\[64\%\]{
+  width: 64%;
 }
 
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[170px\]{
-  width: 170px;
-}
-
-.w-\[766px\]{
-  width: 766px;
+.w-\[calc\(36\%-24px\)\]{
+  width: calc(36% - 24px);
 }
 
 .max-w-7xl{
@@ -961,6 +994,11 @@ video {
 
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[10px\]{
+  --tw-translate-y: -10px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1017,16 +1055,16 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
 }
 
 .gap-x-1{
@@ -1063,6 +1101,10 @@ video {
   row-gap: 2.5rem;
 }
 
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
 .gap-y-3{
   row-gap: 0.75rem;
 }
@@ -1079,8 +1121,9 @@ video {
   row-gap: 25px;
 }
 
-.gap-y-2{
-  row-gap: 0.5rem;
+.gap-x-6{
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -1105,6 +1148,14 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
 .rounded-\[20px\]{
   border-radius: 20px;
 }
@@ -1123,14 +1174,6 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
-}
-
-.rounded-2xl{
-  border-radius: 1rem;
-}
-
-.rounded-3xl{
-  border-radius: 1.5rem;
 }
 
 .rounded-xl{
@@ -1155,6 +1198,14 @@ video {
 
 .border-t{
   border-top-width: 1px;
+}
+
+.border-l{
+  border-left-width: 1px;
+}
+
+.border-r{
+  border-right-width: 1px;
 }
 
 .border-dashed{
@@ -1195,6 +1246,16 @@ video {
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F3F3F3\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2f2f2\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1215,6 +1276,11 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
 .bg-input-footer{
   background-color: rgba(255, 255, 255, 0.25);
 }
@@ -1222,11 +1288,6 @@ video {
 .bg-orange-300{
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-red-300{
@@ -1244,14 +1305,14 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#F3F3F3\]{
+.bg-green-300{
   --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f2f2f2\]{
+.bg-yellow-100{
   --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+  background-color: rgb(254 249 195 / var(--tw-bg-opacity));
 }
 
 .\!p-\[5px\]{
@@ -1272,6 +1333,14 @@ video {
 
 .p-5{
   padding: 1.25rem;
+}
+
+.p-6{
+  padding: 1.5rem;
+}
+
+.p-4{
+  padding: 1rem;
 }
 
 .px-2{
@@ -1357,6 +1426,14 @@ video {
   padding-top: 1.25rem;
 }
 
+.pb-12{
+  padding-bottom: 3rem;
+}
+
+.pr-4{
+  padding-right: 1rem;
+}
+
 .text-left{
   text-align: left;
 }
@@ -1388,6 +1465,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -1417,11 +1499,6 @@ video {
   line-height: 1.75rem;
 }
 
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
-}
-
 .font-bold{
   font-weight: 700;
 }
@@ -1434,8 +1511,16 @@ video {
   font-weight: 600;
 }
 
+.font-medium{
+  font-weight: 500;
+}
+
 .uppercase{
   text-transform: uppercase;
+}
+
+.leading-tight{
+  line-height: 1.25;
 }
 
 .tracking-wide{
@@ -1487,6 +1572,16 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-yellow-700{
+  --tw-text-opacity: 1;
+  color: rgb(161 98 7 / var(--tw-text-opacity));
+}
+
 .opacity-0{
   opacity: 0;
 }
@@ -1494,6 +1589,12 @@ video {
 .shadow-\[-5px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
   --tw-shadow: -5px 5px 15px 2px rgba(0,0,0,0.3);
   --tw-shadow-colored: -5px 5px 15px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_10px_black\]{
+  --tw-shadow: 0 10px black;
+  --tw-shadow-colored: 0 10px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1524,6 +1625,12 @@ video {
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[4px_4px_15px_gray\]{
+  --tw-shadow: 4px 4px 15px gray;
+  --tw-shadow-colored: 4px 4px 15px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1640,6 +1747,12 @@ video {
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
+.active\:shadow-\[0_0_white\]:active{
+  --tw-shadow: 0 0 white;
+  --tw-shadow-colored: 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .active\:shadow-none:active{
   --tw-shadow: 0 0 #0000;
   --tw-shadow-colored: 0 0 #0000;
@@ -1684,9 +1797,18 @@ video {
   opacity: 1;
 }
 
+.peer:checked ~ .peer-checked\:border-2{
+  border-width: 2px;
+}
+
 .peer:checked ~ .peer-checked\:border-black{
   --tw-border-opacity: 1;
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
+}
+
+.peer:checked ~ .peer-checked\:border-blue-300{
+  --tw-border-opacity: 1;
+  border-color: rgb(147 197 253 / var(--tw-border-opacity));
 }
 
 .peer:checked ~ .peer-checked\:bg-black{
@@ -1694,7 +1816,17 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
+.peer:checked ~ .peer-checked\:bg-blue-200{
+  --tw-bg-opacity: 1;
+  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
+}
+
 .peer:checked ~ .peer-checked\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.peer:checked ~ .peer-checked\:text-black{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
