--- a/view/css/index.css
+++ b/view/css/index.css
@@ -15,4 +15,13 @@
     .input{
         @apply border border-gray-300 px-4 py-2 rounded-md  duration-300 hover:border-blue-500 focus:outline-none focus:ring focus:border-blue-500;
     }
+    input[type="number"] {
+        -webkit-appearance: textfield;
+        -moz-appearance: textfield;
+        appearance: textfield;
+    }
+    input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    }
 }
