--- a/view/css/output.css
+++ b/view/css/output.css
@@ -584,6 +584,17 @@ video {
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 
+input[type="number"] {
+  -webkit-appearance: textfield;
+  -moz-appearance: textfield;
+  appearance: textfield;
+}
+
+input[type=number]::-webkit-inner-spin-button,
+    input[type=number]::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+}
+
 .invisible{
   visibility: hidden;
 }
@@ -608,12 +619,20 @@ video {
   left: -1.5rem;
 }
 
+.-left-\[25px\]{
+  left: -25px;
+}
+
 .-right-5{
   right: -1.25rem;
 }
 
 .-right-6{
   right: -1.5rem;
+}
+
+.-right-\[25px\]{
+  right: -25px;
 }
 
 .-top-3{
@@ -654,14 +673,6 @@ video {
 
 .top-full{
   top: 100%;
-}
-
-.-left-\[25px\]{
-  left: -25px;
-}
-
-.-right-\[25px\]{
-  right: -25px;
 }
 
 .z-50{
@@ -774,12 +785,12 @@ video {
   height: 70px !important;
 }
 
-.h-10{
-  height: 2.5rem;
-}
-
 .h-12{
   height: 3rem;
+}
+
+.h-14{
+  height: 3.5rem;
 }
 
 .h-20{
@@ -790,30 +801,6 @@ video {
   height: 1.5rem;
 }
 
-.h-\[35px\]{
-  height: 35px;
-}
-
-.h-\[380px\]{
-  height: 380px;
-}
-
-.h-auto{
-  height: auto;
-}
-
-.h-full{
-  height: 100%;
-}
-
-.h-\[42px\]{
-  height: 42px;
-}
-
-.h-14{
-  height: 3.5rem;
-}
-
 .h-\[100px\]{
   height: 100px;
 }
@@ -822,8 +809,29 @@ video {
   height: 222px;
 }
 
+.h-\[35px\]{
+  height: 35px;
+}
+
 .h-\[360px\]{
   height: 360px;
+}
+
+.h-\[42px\]{
+  height: 42px;
+}
+
+.h-auto{
+  height: auto;
+}
+
+.h-fit{
+  height: -moz-fit-content;
+  height: fit-content;
+}
+
+.h-full{
+  height: 100%;
 }
 
 .max-h-0{
@@ -832,6 +840,14 @@ video {
 
 .\!w-\[70px\]{
   width: 70px !important;
+}
+
+.w-1\/2{
+  width: 50%;
+}
+
+.w-1\/3{
+  width: 33.333333%;
 }
 
 .w-10{
@@ -850,12 +866,20 @@ video {
   width: 6rem;
 }
 
+.w-28{
+  width: 7rem;
+}
+
 .w-6{
   width: 1.5rem;
 }
 
 .w-96{
   width: 24rem;
+}
+
+.w-\[100px\]{
+  width: 100px;
 }
 
 .w-\[1200px\]{
@@ -874,6 +898,10 @@ video {
   width: 1480px;
 }
 
+.w-\[170px\]{
+  width: 170px;
+}
+
 .w-\[222px\]{
   width: 222px;
 }
@@ -882,8 +910,8 @@ video {
   width: 270px;
 }
 
-.w-\[30\%\]{
-  width: 30%;
+.w-\[300px\]{
+  width: 300px;
 }
 
 .w-\[35px\]{
@@ -910,6 +938,10 @@ video {
   width: 70%;
 }
 
+.w-\[766px\]{
+  width: 766px;
+}
+
 .w-\[calc\(30\%-40px\)\]{
   width: calc(30% - 40px);
 }
@@ -931,36 +963,17 @@ video {
   width: 100%;
 }
 
-.w-1\/2{
-  width: 50%;
-}
-
-.w-1\/3{
-  width: 33.333333%;
-}
-
-.w-28{
-  width: 7rem;
-}
-
-.w-\[100px\]{
-  width: 100px;
-}
-
-.w-\[170px\]{
-  width: 170px;
-}
-
-.w-\[766px\]{
-  width: 766px;
-}
-
 .max-w-7xl{
   max-width: 80rem;
 }
 
 .-translate-x-1\/2{
   --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.-translate-y-\[10px\]{
+  --tw-translate-y: -10px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
@@ -1017,16 +1030,16 @@ video {
   justify-content: space-evenly;
 }
 
+.gap-2{
+  gap: 0.5rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
 
 .gap-5{
   gap: 1.25rem;
-}
-
-.gap-2{
-  gap: 0.5rem;
 }
 
 .gap-x-1{
@@ -1063,6 +1076,10 @@ video {
   row-gap: 2.5rem;
 }
 
+.gap-y-2{
+  row-gap: 0.5rem;
+}
+
 .gap-y-3{
   row-gap: 0.75rem;
 }
@@ -1077,10 +1094,6 @@ video {
 
 .gap-y-\[25px\]{
   row-gap: 25px;
-}
-
-.gap-y-2{
-  row-gap: 0.5rem;
 }
 
 .space-y-4 > :not([hidden]) ~ :not([hidden]){
@@ -1105,6 +1118,14 @@ video {
   border-radius: 0.25rem;
 }
 
+.rounded-2xl{
+  border-radius: 1rem;
+}
+
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
+
 .rounded-\[20px\]{
   border-radius: 20px;
 }
@@ -1123,14 +1144,6 @@ video {
 
 .rounded-md{
   border-radius: 0.375rem;
-}
-
-.rounded-2xl{
-  border-radius: 1rem;
-}
-
-.rounded-3xl{
-  border-radius: 1.5rem;
 }
 
 .rounded-xl{
@@ -1195,6 +1208,16 @@ video {
   background-color: rgb(51 51 51 / var(--tw-bg-opacity));
 }
 
+.bg-\[\#F3F3F3\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#f2f2f2\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
+}
+
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
@@ -1215,6 +1238,11 @@ video {
   background-color: rgb(209 213 219 / var(--tw-bg-opacity));
 }
 
+.bg-gray-600{
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity));
+}
+
 .bg-input-footer{
   background-color: rgba(255, 255, 255, 0.25);
 }
@@ -1222,11 +1250,6 @@ video {
 .bg-orange-300{
   --tw-bg-opacity: 1;
   background-color: rgb(253 186 116 / var(--tw-bg-opacity));
-}
-
-.bg-orange-400{
-  --tw-bg-opacity: 1;
-  background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
 .bg-red-300{
@@ -1242,16 +1265,6 @@ video {
 .bg-white{
   --tw-bg-opacity: 1;
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#F3F3F3\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(243 243 243 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#f2f2f2\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(242 242 242 / var(--tw-bg-opacity));
 }
 
 .\!p-\[5px\]{
@@ -1388,6 +1401,11 @@ video {
   line-height: 2rem;
 }
 
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+
 .text-5xl{
   font-size: 3rem;
   line-height: 1;
@@ -1415,11 +1433,6 @@ video {
 .text-xl{
   font-size: 1.25rem;
   line-height: 1.75rem;
-}
-
-.text-4xl{
-  font-size: 2.25rem;
-  line-height: 2.5rem;
 }
 
 .font-bold{
@@ -1494,6 +1507,12 @@ video {
 .shadow-\[-5px_5px_15px_2px_rgba\(0\2c 0\2c 0\2c 0\.3\)\]{
   --tw-shadow: -5px 5px 15px 2px rgba(0,0,0,0.3);
   --tw-shadow-colored: -5px 5px 15px 2px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[0_10px_black\]{
+  --tw-shadow: 0 10px black;
+  --tw-shadow-colored: 0 10px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1638,6 +1657,12 @@ video {
 .active\:translate-y-0:active{
   --tw-translate-y: 0px;
   transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.active\:shadow-\[0_0_white\]:active{
+  --tw-shadow: 0 0 white;
+  --tw-shadow-colored: 0 0 var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
 .active\:shadow-none:active{
