--- a/view/css/output.css
+++ b/view/css/output.css
@@ -668,18 +668,6 @@ video {
   z-index: 50;
 }
 
-.col-span-2{
-  grid-column: span 2 / span 2;
-}
-
-.col-start-2{
-  grid-column-start: 2;
-}
-
-.col-end-5{
-  grid-column-end: 5;
-}
-
 .m-12{
   margin: 3rem;
 }
@@ -710,12 +698,12 @@ video {
   margin-left: auto;
 }
 
-.mr-20{
-  margin-right: 5rem;
-}
-
 .mr-5{
   margin-right: 1.25rem;
+}
+
+.mt-10{
+  margin-top: 2.5rem;
 }
 
 .mt-12{
@@ -728,10 +716,6 @@ video {
 
 .mt-3{
   margin-top: 0.75rem;
-}
-
-.mt-40{
-  margin-top: 10rem;
 }
 
 .mt-5{
@@ -752,10 +736,6 @@ video {
 
 .mt-9{
   margin-top: 2.25rem;
-}
-
-.mt-10{
-  margin-top: 2.5rem;
 }
 
 .block{
@@ -794,8 +774,16 @@ video {
   height: 3.5rem;
 }
 
+.h-16{
+  height: 4rem;
+}
+
 .h-20{
   height: 5rem;
+}
+
+.h-5{
+  height: 1.25rem;
 }
 
 .h-6{
@@ -835,14 +823,6 @@ video {
   height: 100%;
 }
 
-.h-5{
-  height: 1.25rem;
-}
-
-.h-16{
-  height: 4rem;
-}
-
 .max-h-0{
   max-height: 0px;
 }
@@ -859,10 +839,6 @@ video {
   width: 33.333333%;
 }
 
-.w-10{
-  width: 2.5rem;
-}
-
 .w-12{
   width: 3rem;
 }
@@ -877,6 +853,10 @@ video {
 
 .w-28{
   width: 7rem;
+}
+
+.w-5{
+  width: 1.25rem;
 }
 
 .w-6{
@@ -943,6 +923,10 @@ video {
   width: 600px;
 }
 
+.w-\[64\%\]{
+  width: 64%;
+}
+
 .w-\[70\%\]{
   width: 70%;
 }
@@ -951,8 +935,20 @@ video {
   width: 766px;
 }
 
+.w-\[calc\(100\%-200px\)\]{
+  width: calc(100% - 200px);
+}
+
+.w-\[calc\(100\%-96px\)\]{
+  width: calc(100% - 96px);
+}
+
 .w-\[calc\(30\%-40px\)\]{
   width: calc(30% - 40px);
+}
+
+.w-\[calc\(36\%-24px\)\]{
+  width: calc(36% - 24px);
 }
 
 .w-\[calc\(40\%-50px\)\]{
@@ -970,22 +966,6 @@ video {
 
 .w-full{
   width: 100%;
-}
-
-.w-5{
-  width: 1.25rem;
-}
-
-.w-\[calc\(100\%-96px\)\]{
-  width: calc(100% - 96px);
-}
-
-.w-\[64\%\]{
-  width: 64%;
-}
-
-.w-\[calc\(36\%-24px\)\]{
-  width: calc(36% - 24px);
 }
 
 .max-w-7xl{
@@ -1059,10 +1039,6 @@ video {
   gap: 0.5rem;
 }
 
-.gap-4{
-  gap: 1rem;
-}
-
 .gap-5{
   gap: 1.25rem;
 }
@@ -1092,13 +1068,14 @@ video {
        column-gap: 1.25rem;
 }
 
+.gap-x-6{
+  -moz-column-gap: 1.5rem;
+       column-gap: 1.5rem;
+}
+
 .gap-x-\[50px\]{
   -moz-column-gap: 50px;
        column-gap: 50px;
-}
-
-.gap-y-10{
-  row-gap: 2.5rem;
 }
 
 .gap-y-2{
@@ -1119,17 +1096,6 @@ video {
 
 .gap-y-\[25px\]{
   row-gap: 25px;
-}
-
-.gap-x-6{
-  -moz-column-gap: 1.5rem;
-       column-gap: 1.5rem;
-}
-
-.space-y-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-y-reverse: 0;
-  margin-top: calc(1rem * calc(1 - var(--tw-space-y-reverse)));
-  margin-bottom: calc(1rem * var(--tw-space-y-reverse));
 }
 
 .overflow-hidden{
@@ -1196,16 +1162,16 @@ video {
   border-bottom-width: 1px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-l{
   border-left-width: 1px;
 }
 
 .border-r{
   border-right-width: 1px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-dashed{
@@ -1281,6 +1247,11 @@ video {
   background-color: rgb(75 85 99 / var(--tw-bg-opacity));
 }
 
+.bg-green-300{
+  --tw-bg-opacity: 1;
+  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
+}
+
 .bg-input-footer{
   background-color: rgba(255, 255, 255, 0.25);
 }
@@ -1305,11 +1276,6 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
-.bg-green-300{
-  --tw-bg-opacity: 1;
-  background-color: rgb(134 239 172 / var(--tw-bg-opacity));
-}
-
 .bg-yellow-100{
   --tw-bg-opacity: 1;
   background-color: rgb(254 249 195 / var(--tw-bg-opacity));
@@ -1331,16 +1297,16 @@ video {
   padding: 0.75rem;
 }
 
+.p-4{
+  padding: 1rem;
+}
+
 .p-5{
   padding: 1.25rem;
 }
 
 .p-6{
   padding: 1.5rem;
-}
-
-.p-4{
-  padding: 1rem;
 }
 
 .px-2{
@@ -1398,40 +1364,16 @@ video {
   padding-bottom: 1.25rem;
 }
 
-.pb-5{
-  padding-bottom: 1.25rem;
-}
-
-.pl-14{
-  padding-left: 3.5rem;
-}
-
-.pl-5{
-  padding-left: 1.25rem;
-}
-
-.pr-6{
-  padding-right: 1.5rem;
-}
-
-.pt-20{
-  padding-top: 5rem;
-}
-
-.pt-3{
-  padding-top: 0.75rem;
-}
-
-.pt-5{
-  padding-top: 1.25rem;
-}
-
 .pb-12{
   padding-bottom: 3rem;
 }
 
 .pr-4{
   padding-right: 1rem;
+}
+
+.pt-5{
+  padding-top: 1.25rem;
 }
 
 .text-left{
@@ -1507,12 +1449,12 @@ video {
   font-weight: 800;
 }
 
-.font-semibold{
-  font-weight: 600;
-}
-
 .font-medium{
   font-weight: 500;
+}
+
+.font-semibold{
+  font-weight: 600;
 }
 
 .uppercase{
@@ -1562,6 +1504,16 @@ video {
   color: rgb(17 24 39 / var(--tw-text-opacity));
 }
 
+.text-green-700{
+  --tw-text-opacity: 1;
+  color: rgb(21 128 61 / var(--tw-text-opacity));
+}
+
+.text-red-400{
+  --tw-text-opacity: 1;
+  color: rgb(248 113 113 / var(--tw-text-opacity));
+}
+
 .text-red-500{
   --tw-text-opacity: 1;
   color: rgb(239 68 68 / var(--tw-text-opacity));
@@ -1570,11 +1522,6 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-green-700{
-  --tw-text-opacity: 1;
-  color: rgb(21 128 61 / var(--tw-text-opacity));
 }
 
 .text-yellow-700{
@@ -1595,6 +1542,12 @@ video {
 .shadow-\[0_10px_black\]{
   --tw-shadow: 0 10px black;
   --tw-shadow-colored: 0 10px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.shadow-\[4px_4px_15px_gray\]{
+  --tw-shadow: 4px 4px 15px gray;
+  --tw-shadow-colored: 4px 4px 15px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1625,12 +1578,6 @@ video {
 .shadow-xl{
   --tw-shadow: 0 20px 25px -5px rgb(0 0 0 / 0.1), 0 8px 10px -6px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 20px 25px -5px var(--tw-shadow-color), 0 8px 10px -6px var(--tw-shadow-color);
-  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
-}
-
-.shadow-\[4px_4px_15px_gray\]{
-  --tw-shadow: 4px 4px 15px gray;
-  --tw-shadow-colored: 4px 4px 15px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
 }
 
@@ -1806,27 +1753,12 @@ video {
   border-color: rgb(0 0 0 / var(--tw-border-opacity));
 }
 
-.peer:checked ~ .peer-checked\:border-blue-300{
-  --tw-border-opacity: 1;
-  border-color: rgb(147 197 253 / var(--tw-border-opacity));
-}
-
 .peer:checked ~ .peer-checked\:bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.peer:checked ~ .peer-checked\:bg-blue-200{
-  --tw-bg-opacity: 1;
-  background-color: rgb(191 219 254 / var(--tw-bg-opacity));
-}
-
 .peer:checked ~ .peer-checked\:text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.peer:checked ~ .peer-checked\:text-black{
-  --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
 }
